add comments section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,60 @@
         <img src="/assets/images/Photo-gallery-9.jpg" />
       </div>
     </section>
+
+    <section class="comment">
+      <h1 class="title">Join the Conversation</h1>
+      <div class="comment__wrapper">
+        <div class="comment__profile-container">
+          <img
+            src="/assets/images/Mohan-muruge.jpg"
+            class="comment__profile_image" />
+        </div>
+
+        <form class="comment__form">
+          <div class="comment__form-container">
+            <label class="comment__form-label">NAME</label>
+            <input
+              type="text"
+              id="name"
+              placeholder="Enter your name"
+              class="comment__form-inputbox" />
+          </div>
+          <div class="comment__form-container">
+            <label class="comment__form-label">COMMENT</label>
+            <input
+              type="text"
+              id="comment_text"
+              placeholder="Add a new comment"
+              class="comment__form-inputbox comment__form-inputbox-text" />
+          </div>
+
+          <button type="submit" class="comment__form-button">COMMENT</button>
+        </form>
+      </div>
+
+      <div class="comment__list-wrapper">
+        <div class="comment__list-container">
+          <!-- <div class="comment__card">
+          <div class="comment__card-profile_img"></div>
+          <div class="comment__card-container">
+            <div class="comment__card-name_date_container">
+              <span class="comment__card-name">Connor Walton</span>
+              <span class="comment__card-date">02/17/2021</span>
+            </div>
+
+            <p class="comment__card-content">
+              This is art. This is inexplicable magic expressed in the purest
+              way, everything that makes up this majestic work deserves
+              reverence. Let us appreciate this for what it is and what it
+              contains.
+            </p>
+          </div>
+        </div> -->
+        </div>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="footer__title-wrapper">
         <h2 class="footer__title">Get in Touch</h2>
@@ -146,5 +200,6 @@
         Copyright The Bees Knees © 2021 All Rights Reserved
       </p>
     </footer>
+    <script src="/scripts/index-page.js"></script>
   </body>
 </html>
