add mobile  show page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__list-item--active">
-            <a href="#biography">Biography</a>
+            <a href="/index.html">Biography</a>
           </li>
           <li class="header__list-item">
-            <a href="#shows">Shows</a>
+            <a href="/pages/shows.html">Shows</a>
           </li>
         </ul>
       </nav>
