--- a/pages/shows.html
+++ b/pages/shows.html
@@ -22,19 +22,18 @@
     </header>
 
     <section class="hero">
-      <h3>Beautiful Beast Album</h3>
-      <!-- <div class="hero__title-container">
+      <div class="hero__title-container">
+        <h3 class="hero__subtitle">Beautiful Beast Album</h3>
         <h1 class="hero__title">Queen of Yellow x</h1>
         <h1 class="hero__title">For The Stings</h1>
-      </div> -->
-
-      <div>
-        <iframe
-          width="100%"
-          height="166"
-          scrolling="no"
-          frameborder="no"
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1875756174&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+        <div class="hero__sound">
+          <iframe
+            width="100%"
+            height="166"
+            scrolling="no"
+            frameborder="no"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1875756174&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+        </div>
       </div>
 
       <!-- <div
