responsive design tablet

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="/assets/logos/Logo-bandsite.svg" />
+      <a href="/index.html"
+        ><img class="header__logo" src="/assets/logos/Logo-bandsite.svg"
+      /></a>
+
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__list-item--active">
