--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header class="header">
-      <img class="header__logo" src="/assets/logos/Logo-bandsite.svg" />
+      <a href="/index.html">
+        <img class="header__logo" src="/assets/logos/Logo-bandsite.svg" />
+      </a>
+
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__list-item">
@@ -70,7 +73,12 @@
     <section class="show">
       <h1 class="show__title">Shows</h1>
       <div class="show__list-wrapper">
-        <!-- <div>card</div> -->
+        <div class="show__hedaer-tablet-container">
+          <span class="show__header-tablet">DATE</span>
+          <span class="show__header-tablet">VENUE</span>
+          <span class="show__header-tablet">LOCATION</span>
+          <div class="show__header-tablet"></div>
+        </div>
       </div>
     </section>
 
